fix(landing): remove x axis overflow

--- a/src/routes/Landing/Landing.scss
+++ b/src/routes/Landing/Landing.scss
@@ -27,7 +27,6 @@
         box-sizing: border-box;
         overflow: hidden;
         padding: 2rem 4rem 1rem;
-        width: 100vw;
     }
 
     &__content {
